# animefetch

./: .SRCINFO  .gitignore  CMakeLists.txt  PKGBUILD  README.md  animefetch.cpp
