cmake_minimum_required(VERSION 3.10)
project(AnimeFetch VERSION 1.0)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -march=native -flto -funroll-loops -ftree-vectorize")
find_package(CURL REQUIRED)
find_package(nlohmann_json REQUIRED)
add_executable(animefetch animefetch.cpp)
target_link_libraries(animefetch PRIVATE CURL::libcurl nlohmann_json::nlohmann_json)
